# amptune_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/amplify/: amplify.cpp  amplify.h
src/gui/: seismic_app.cpp  seismic_app.h  seismic_canvas.cpp  seismic_canvas.h
src/ioutils/: segy_reader.cpp  segy_reader.h  segy_writer.cpp  segy_writer.h
